fix css spacing

--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,7 @@ header{
     display:flex;
     align-items: center;
     justify-content: center;
+    margin-top: -7rem;
 }
 #about-area{
     max-width: 600px;
@@ -215,6 +216,8 @@ header{
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    position: relative;
+    margin-top: -7rem;
 }
 #table-container{
     background-color: rgb(214, 214, 214);
